--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://finaxis001_db_user:mqsF6XEyCu1gpJsJ@cluster0.c2gg1s5.mongodb.net/?appName=Cluster0
+MONGO_URI = mongodb+srv://amitsahu91796_db_user:TAUlKLeoRvmhs9fc@cluster0.ozfei4a.mongodb.net/?appName=Cluster0
 PORT=5000
 JWT_SECRET=mysecretkey
 ADMIN_JOIN_CODE=123456
