--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://amitsahu91796_db_user:TAUlKLeoRvmhs9fc@cluster0.ozfei4a.mongodb.net/?appName=Cluster0
 PORT=5000
-JWT_SECRET=mysecretkey
-ADMIN_JOIN_CODE=123456
+JWT_SECRET=your_secret_key_here
+MONGO_URL=paste_your_mongodb_atlas_url_here
+ADMIN_JOIN_CODE=your_admin_join_code
